Próba pobrania informacji na temat instancji

--- a/static/index.html
+++ b/static/index.html
@@ -59,6 +59,15 @@
 	</div>
 	</div>
 </form>
+
+<form action="/awsinfo" method="POST" id="sign-up-form" class="form-horizontal">
+<div class="container">
+	<div class="col-xs-3">
+			<input type="submit" class="btn btn-lg btn-primary btn-block" value="EC2 INFO"/>
+	</div>
+</div>
+</form>
+
 	  		</div>
 			<footer class="panel-footer">
 				
