--- a/static/index.html
+++ b/static/index.html
@@ -1,81 +1,56 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">		
-	</head>
-	<body>
-		<nav class="navbar">
-			
-		</nav>
-		<div class="container">
-		<section id="section1" class="panel panel-default">
 
-			<div class="panel-heading">
-			<div class="container">
-	    		<h3 class="panel-title">Enter an arbitrary text and choose hash algorithms to calculate digests</h3>
-	    		</div>
-		  	</div>
-	  		<div class="panel-body">
-	  <form action="/digest" method="POST" id="sign-up-form" class="form-horizontal">
-	
-	<div class="container ">
-		<div class="control-group col-xs-8">
-		<textarea type="text" class="form-control" placeholder="enter text here" name="txt" rows="3"> </textarea>
-		</div>
-	</div>
-	
-	<div class="container">
-	<div class="col-xs-5">
-	<div class="checkbox-inline">
-	    <label>
-	      <input type="checkbox" name="alg[md5]" checked> MD5
-	    </label>
-  	</div>
-	<div class="checkbox-inline">
-	    <label>
-	      <input type="checkbox" name="alg[sha1]" checked> SHA1
-	    </label>
-  	</div>
- 	<div class="checkbox-inline">
-	    <label>
-	      <input type="checkbox" name="alg[sha256]" checked> SHA256
-	    </label>
-  	</div>
-  	<div class="checkbox-inline">
-	    <label>
-	      <input type="checkbox" name="alg[sha512]" checked> SHA512
-	    </label>
-  	</div>
-  	<div class="number ">
-	    <label>
-	      Loop count: <input type="number" name="loop"> 
-	    </label>
-  	</div>
-	</div>
-	</div>
-	<div class="container">
-	<div class="col-xs-3">
-	<input type="submit" class="btn btn-lg btn-primary btn-block" value="Confirm"/>
-	</div>
-	</div>
-</form>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<form action="/awsinfo" method="POST" id="sign-up-form" class="form-horizontal">
-<div class="container">
-	<div class="col-xs-3">
-			<input type="submit" class="btn btn-lg btn-primary btn-block" value="EC2 INFO"/>
-	</div>
-</div>
-</form>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/newbootstrap.css" />
+</head>
 
-	  		</div>
-			<footer class="panel-footer">
-				
-			</footer>
-		</section>
-	</div>		
-		<footer  class="navbar">
-		
-		</footer>
-	</body>
+<body>
+    <div class="container">
+        <div class="row">
+            <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
+            <button style="margin:1rem" type="button" class="btn btn-primary">Usuń</button>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <div class="card">
+                    <div class="row text-center text-lg-left" data-bind="foreach: viewModel.pictures">
+                        <div class="col-lg-3 col-md-4 col-xs-6">
+
+                            <a data-bind="click: function(){addPicture(name);}, attr: {src: url}" class="d-block mb-4 h-100">
+                                        <img data-bind=" attr: {src: url}" class="img-fluid img-thumbnail" alt=""/>
+                                      </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-4">
+                <form style="height:60%; border-width:5px; border-style:dashed; border-color:aqua;" action="/file-upload" class="dropzone">
+                    <div class="fallback">
+                        <input name="file" type="file" multiple />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/dropzone.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/xml2json.js"></script>
+    <script src="assets/js/knockout-3.4.2.js"></script>
+    <script src="assets/js/app.js"></script>
+</body>
+
 </html>
