--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/newbootstrap.css" />
+    <link rel="stylesheet" href="css/newbootstrap.css" />
 </head>
 
 <body>
@@ -46,11 +46,11 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
-    <script src="assets/js/dropzone.js"></script>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/xml2json.js"></script>
-    <script src="assets/js/knockout-3.4.2.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="js/dropzone.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/xml2json.js"></script>
+    <script src="js/knockout-3.4.2.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
