--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
-            <button style="margin:1rem" type="button" class="btn btn-primary">Usuń</button>
+            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="deletePhoto()">Usuń</button>
         </div>
 
         <div class="row">
