Dodanie wysyłania wiadomości o obrocie zdjęcia

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
         <div class="row">
             <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
             <button style="margin:1rem" type="button" class="btn btn-primary" onclick="deletePhoto()">Usuń</button>
+            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="rotatePhoto()">Obróć o 90 stopni</button>
         </div>
 
         <div class="row">
