Dodanie wysyłanie wiadomości dotyczącej skalowania zdjęcia

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
             <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
             <button style="margin:1rem" type="button" class="btn btn-primary" onclick="deletePhoto()">Usuń</button>
             <button style="margin:1rem" type="button" class="btn btn-primary" onclick="rotatePhoto()">Obróć o 90 stopni</button>
+            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="scalePhoto()">Obróć o 90 stopni</button>
         </div>
 
         <div class="row">
