--- a/static/index.html
+++ b/static/index.html
@@ -5,54 +5,69 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="css/newbootstrap.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+          integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="css/newbootstrap.css"/>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
-            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="deletePhoto()">Usuń</button>
-            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="rotatePhoto()">Obróć o 90 stopni</button>
-            <button style="margin:1rem" type="button" class="btn btn-primary" onclick="scalePhoto()">Obróć o 90 stopni</button>
-        </div>
+<div class="container">
+    <div class="row">
+        <button style="margin:1rem" type="button" class="btn btn-primary">Prześlij plik</button>
+        <button style="margin:1rem" type="button" class="btn btn-primary" onclick="deletePhoto()">Usuń</button>
+        <button style="margin:1rem" type="button" class="btn btn-primary" onclick="rotatePhoto()">Obróć o 90 stopni
+        </button>
+        <button style="margin:1rem" type="button" class="btn btn-primary" onclick="scalePhoto()">Przeskaluj zdjęcie
+        </button>
+    </div>
 
-        <div class="row">
-            <div class="col-12 col-md-8">
-                <div class="card">
-                    <div class="row text-center text-lg-left" data-bind="foreach: viewModel.pictures">
-                        <div class="col-lg-3 col-md-4 col-xs-6">
-
-                            <a data-bind="click: function(){addPicture(name);}, attr: {src: url}" class="d-block mb-4 h-100">
-                                        <img data-bind=" attr: {src: url}" class="img-fluid img-thumbnail" alt=""/>
-                                      </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6 col-md-4">
-                <form style="height:60%; border-width:5px; border-style:dashed; border-color:aqua;" action="/file-upload" class="dropzone">
-                    <div class="fallback">
-                        <input name="file" type="file" multiple />
-                    </div>
-                </form>
-            </div>
+    <div class="row">
+        <label>Wybrane zdjęcia: </label>
+        <div data-bind="foreach: viewModel.choosenPictures">
+            <label data-bind="text: $data"/>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <div class="row">
+        <div class="col-12 col-md-8">
+            <div class="card">
+                <div class="row text-center text-lg-left" data-bind="foreach: viewModel.pictures">
+                    <div class="col-lg-3 col-md-4 col-xs-6">
+
+                        <a data-bind="click: function(){addPicture(name);}, attr: {src: url}"
+                           class="d-block mb-4 h-100">
+                            <img data-bind=" attr: {src: url}" class="img-fluid img-thumbnail" alt=""/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6 col-md-4">
+            <form style="height:60%; border-width:5px; border-style:dashed; border-color:aqua;" action="/file-upload"
+                  class="dropzone">
+                <div class="fallback">
+                    <input name="file" type="file" multiple/>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
-    <script src="js/dropzone.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/xml2json.js"></script>
-    <script src="js/knockout-3.4.2.js"></script>
-    <script src="js/app.js"></script>
+<script src="js/dropzone.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/xml2json.js"></script>
+<script src="js/knockout-3.4.2.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
