Walka ze zdjęciami

--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,7 @@
                 <!-- "js-fileapi-wrapper" -- required class -->
                 <div class="js-fileapi-wrapper upload-btn">
                     <div class="upload-btn__txt">Choose files</div>
-                    <input id="choose" name="files" type="file" multiple/>
+                    <input id="files" name="files" type="file" multiple/>
                 </div>
                 <div id="images"><!-- previews --></div>
             </div>
