--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -48,7 +48,7 @@
                 <!-- "js-fileapi-wrapper" -- required class -->
                 <div class="js-fileapi-wrapper upload-btn">
                     <div class="upload-btn__txt">Choose files</div>
-                    <input id="files" name="files" type="file" multiple/>
+                    <input id="files" name="files" type="file"/>
                 </div>
                 <div id="images"><!-- previews --></div>
             </div>
@@ -69,7 +69,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/xml2json.js"></script>
 <script src="js/knockout-3.4.2.js"></script>
-<script src="js/FileAPI.min.js"></script>
 <script src="js/app.js"></script>
 
 </body>
