--- a/static/index.html
+++ b/static/index.html
@@ -65,11 +65,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
-<script src="static/assets/js/dropzone.js"></script>
-<script src="static/assets/js/jquery.min.js"></script>
-<script src="static/assets/js/xml2json.js"></script>
-<script src="static/assets/js/knockout-3.4.2.js"></script>
-<script src="static/assets/js/app.js"></script>
+<script src="js/dropzone.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/xml2json.js"></script>
+<script src="js/knockout-3.4.2.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 
